Add gradle task for it